{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Cheats",
            "id": "9101ea43-9b26-4de5-bae1-a66183356ddd",
            "actions": [
                {
                    "name": "OnSpawnGun",
                    "type": "Button",
                    "id": "ea1eadb1-cfd3-47be-8f85-0289a004119b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50d25482-483b-4ae7-b27f-f46becc66020",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSpawnGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "8203f78d-0a73-4fe0-9547-bd5c26c40d56",
            "actions": [
                {
                    "name": "OnMovement",
                    "type": "Value",
                    "id": "02a8938d-2ad1-48b5-aaf8-7f66897305d8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnFire",
                    "type": "Button",
                    "id": "3acc0ae2-2ce1-4809-b19e-4c85d5186637",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnJump",
                    "type": "Button",
                    "id": "4ac6ba7b-d1b7-4df5-98f9-7699a08cb3d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "b98e32db-80bc-47e8-97d8-ccf37923a127",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "724885a6-cf18-4d27-82d6-c298ec1b9f19",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "82824dfc-8b08-4f47-992b-55f2963fbce7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "e8408cc8-a6f7-4bc2-bc3c-46b714ce0cc1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bf73f42c-29e6-4493-8b4e-7700e2bc69e9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3a376aa9-cd01-4961-8871-c9f789348441",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f9aaecf-473b-4f9c-9d97-51dc3396c01f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abb48d19-e59d-45cd-834f-b97dabf29dcc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "d9e3dce8-6f84-41ec-84dc-9e16d900cc1d",
            "actions": [
                {
                    "name": "OnGameStart",
                    "type": "Button",
                    "id": "f6b39353-2b2b-4815-b432-5b4ca3551a51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRestartLevel",
                    "type": "Button",
                    "id": "a45c620e-bfec-4643-8b2c-8c1734d195dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38097423-6c01-4b76-a8fc-63d04dc7a132",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1941256b-7afc-4c72-8525-a02401118d39",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4f4c0cc-8dc3-4285-8275-22ea4561730e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnGameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bcf2b7b-4bbf-45cc-a7e9-eaafb3eb1c3d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}